--- a/example/inlineEditable.html
+++ b/example/inlineEditable.html
@@ -6,6 +6,7 @@
     <title>Select Example</title>
     <script src="js/jquery.min.js"></script>
     <link rel="stylesheet" href="../dist/automizy.css">
+    <link rel="stylesheet" href="../src/styles/inlineEditable.css">
     <link rel="stylesheet" href="../dist/fontawesome/css/font-awesome.min.css">
     <!--
     <link rel="stylesheet" href="../src/styles/table.css">
