inline edit fix

--- a/example/inlineEditable.html
+++ b/example/inlineEditable.html
@@ -34,6 +34,7 @@
                 id: "email",
                 labelBefore: "Email",
                 type: "text",
+                value: 'asd@asd.com',
                 validator: 'email'
             })).drawTo('body').onInlineEditComplete(function (inlineEditable) {
                 console.log(inlineEditable.value());
