--- a/example/tag.html
+++ b/example/tag.html
@@ -21,10 +21,11 @@
     <script src="../dist/automizy.js"></script>
     <script>
         $(function () {
+            var tagOptions = ["asd", "another tag", "more option", "newtag", "ANOTHER_VERY_VERY_LONG_TAG_in_one_word", "last tag", "needmoretag", "stillnotenough", "anotherone", "tagtagtag"];
 
-            tagger = $A.newTagger({
+            window.tagger1 = $A.newTagger({
                 tags: ["another ver-very long tag"],
-                options: ["asd", "another tag", "more option", "newtag", "ANOTHER_VERY_VERY_LONG_TAG_in_one_word", "last tag", "needmoretag", "stillnotenough", "anotherone", "tagtagtag"],
+                options: tagOptions,
                 onRemoveTag: function (tag) {
                     console.log(tag.text()+" removed!")
                 },
@@ -36,17 +37,56 @@
                 }
             }).draw();
 
-
             $A.newButton({
                 text:'add new tag',
                 click: function () {
-                    tagger.addTag();
+                    tagger1.addTag();
                 }
-            }).draw()
+            }).draw();
+
+
+
+
+            window.tagger2 = $A.newTagger({
+                options: tagOptions,
+                target:$('#tagger-box-left'),
+                data:{tags:[]},
+                onRemoveTag: function (tag) {
+                    var tags = tagger2.data('tags');
+                    var index = tags.indexOf(tag.text());
+                    if (index > -1) {
+                        tags.splice(index, 1);
+                    }
+                },
+                onNewTagAdded: function (tag) {
+                    tagger2.data('tags').push(tag.text());
+                }
+            });
+            window.tagger3 = $A.newTagger({
+                options: tagOptions,
+                target:$('#tagger-box-right'),
+                data:{tags:[]},
+                onRemoveTag: function (tag) {
+                    var tags = tagger3.data('tags');
+                    var index = tags.indexOf(tag.text());
+                    if (index > -1) {
+                        tags.splice(index, 1);
+                    }
+                },
+                onNewTagAdded: function (tag) {
+                    tagger3.data('tags').push(tag.text());
+                }
+            });
         })
     </script>
 </head>
 <body>
+<input type="button" value="Add new Tag left" onclick="tagger2.addTag()"/>
+<input type="button" value="Add new Tag right" onclick="tagger3.addTag()" />
+<input type="button" value="Get values (open console)" onclick="console.log(tagger2.data('tags')); console.log(tagger3.data('tags'))" />
+<br/>
+<div id="tagger-box-left" style="border:1px solid #666666; padding:8px; box-sizing:border-box; width:300px; display:inline-block;"></div>
+<div id="tagger-box-right" style="border:1px solid #666666; padding:8px; box-sizing:border-box; width:300px; margin-left:30px; display:inline-block;"></div>
 </body>
 </html>
 
