--- a/src/example/dialog.html
+++ b/src/example/dialog.html
@@ -233,8 +233,9 @@
                                 var a = form.inputs();
                                 var send = true;
                                 for (var i in a) {
-                                    if (a[i].validate() === false)
+                                    if (a[i].validate() === false) {
                                         send = false;
+                                    }
                                     console.log(a[i].validator().errors())
                                 }
                                 if (send === true) {
