--- a/src/automizy.html
+++ b/src/automizy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="width:100%; height:100%;">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,7 +21,7 @@
 
     </script>
 </head>
-<body style="font-family: 'Segoe UI';">
+<body style="font-family: 'Segoe UI'; width:100%; height:100%; margin:0; padding:0;">
 
 </body>
 </html>
