--- a/src/automizy.html
+++ b/src/automizy.html
@@ -22,6 +22,6 @@
     </script>
 </head>
 <body style="font-family: 'Segoe UI'; width:100%; height:100%; margin:0; padding:0;">
-
+    <span id="target" style="display:inline-block; border:1px solid black; padding:9px 16px; position:absolute; top:200px; left:500px">TEST BOX</span>
 </body>
 </html>
